Deprecate \token_new:Nn

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -396,14 +396,6 @@
 %
 % \section{Generic tokens}
 %
-% \begin{function}{\token_new:Nn}
-%   \begin{syntax}
-%     \cs{token_new:Nn} \meta{token_1} \Arg{token_2}
-%   \end{syntax}
-%   Defines \meta{token_1} to globally be a snapshot of \meta{token_2}.
-%   This is an implicit representation of \meta{token_2}.
-% \end{function}
-%
 % \begin{variable}
 %   {
 %     \c_group_begin_token,
@@ -1597,13 +1589,6 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\token_new:Nn}
-%  Creates a new token.
-%    \begin{macrocode}
-\cs_new_protected:Npn \token_new:Nn #1#2 { \cs_new_eq:NN #1 #2 }
-%    \end{macrocode}
-% \end{macro}
-%
 % \begin{macro}
 %   {
 %     \c_group_begin_token,
@@ -2564,6 +2549,16 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \subsection{Deprecated functions}
+%
+% \begin{macro}[deprecated=2018-12-31]{\token_new:Nn}
+%   For removal after 2018-12-31.
+%    \begin{macrocode}
+\__debug_deprecation:nnNNpn { 2018-12-31 } { \cs_new_eq:NN }
+\cs_new_protected:Npn \token_new:Nn #1#2 { \cs_new_eq:NN #1 #2 }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
