Move \__msg_show_wrap:Nn to l3candidates as \msg_show_eval:Nn

--- a/l3kernel/l3fp-assign.dtx
+++ b/l3kernel/l3fp-assign.dtx
@@ -172,18 +172,19 @@
       { > ~ \token_to_str:N #1 = \fp_to_tl:N #1 }
   }
 \cs_new_protected:Npn \fp_show:n
-  { \__msg_show_wrap:Nn \fp_to_tl:n }
+  { \msg_show_eval:Nn \fp_to_tl:n }
 \cs_generate_variant:Nn \fp_show:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\fp_log:N, \fp_log:c, \fp_log:n}
-%   Redirect output of \cs{fp_show:N} and \cs{fp_show:n} to the log.
+%   Redirect output of \cs{fp_show:N} to the log.
+%   Similar to \cs{fp_show:n}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \fp_log:N
   { \__msg_log_next: \fp_show:N }
 \cs_new_protected:Npn \fp_log:n
-  { \__msg_log_next: \fp_show:n }
+  { \msg_log_eval:Nn \fp_to_tl:n }
 \cs_generate_variant:Nn \fp_log:N { c }
 %    \end{macrocode}
 % \end{macro}
