--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -898,7 +898,7 @@
       { > ~ \token_to_str:N #1 = \@@_to_str:n {#1} }
   }
 \cs_new_protected:Npn \bool_show:n
-  { \__msg_show_wrap:Nn \@@_to_str:n }
+  { \msg_show_eval:Nn \@@_to_str:n }
 \cs_new:Npn \@@_to_str:n #1
   { \bool_if:nTF {#1} { true } { false } }
 \cs_generate_variant:Nn \bool_show:N { c }
@@ -912,7 +912,7 @@
 \cs_new_protected:Npn \bool_log:N
   { \__msg_log_next: \bool_show:N }
 \cs_new_protected:Npn \bool_log:n
-  { \__msg_log_next: \bool_show:n }
+  { \msg_log_eval:Nn \@@_to_str:n }
 \cs_generate_variant:Nn \bool_log:N { c }
 %    \end{macrocode}
 % \end{macro}
