--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -2786,12 +2786,12 @@
       { > ~ \token_to_str:N #1 = \bigint_use:N #1 }
   }
 \cs_new_protected:Npn \bigint_show:n
-  { \__msg_show_wrap:Nn \bigint_eval:n }
+  { \msg_show_eval:Nn \bigint_eval:n }
 \cs_generate_variant:Nn \bigint_show:N { c }
 \cs_new_protected:Npn \bigint_log:N
   { \__msg_log_next: \bigint_show:N }
 \cs_new_protected:Npn \bigint_log:n
-  { \__msg_log_next: \bigint_show:n }
+  { \msg_log_eval:Nn \bigint_eval:n }
 \cs_generate_variant:Nn \bigint_log:N { c }
 %    \end{macrocode}
 % \end{macro}
