--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1619,7 +1619,7 @@
 %   dimension expressions: this gives a more unified output.
 %    \begin{macrocode}
 \cs_new_protected:Npn \dim_show:n
-  { \__msg_show_wrap:Nn \dim_eval:n }
+  { \msg_show_eval:Nn \dim_eval:n }
 %    \end{macrocode}
 %  \end{macro}
 %
@@ -1629,7 +1629,7 @@
 \cs_new_eq:NN \dim_log:N \__kernel_register_log:N
 \cs_new_eq:NN \dim_log:c \__kernel_register_log:c
 \cs_new_protected:Npn \dim_log:n
-  { \__msg_log_next: \dim_show:n }
+  { \msg_log_eval:Nn \dim_eval:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1912,7 +1912,7 @@
 %   skip expressions: this gives a more unified output.
 %    \begin{macrocode}
 \cs_new_protected:Npn \skip_show:n
-  { \__msg_show_wrap:Nn \skip_eval:n }
+  { \msg_show_eval:Nn \skip_eval:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1922,7 +1922,7 @@
 \cs_new_eq:NN \skip_log:N \__kernel_register_log:N
 \cs_new_eq:NN \skip_log:c \__kernel_register_log:c
 \cs_new_protected:Npn \skip_log:n
-  { \__msg_log_next: \skip_show:n }
+  { \msg_log_eval:Nn \skip_eval:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2151,7 +2151,7 @@
 %   muskip expressions: this gives a more unified output.
 %    \begin{macrocode}
 \cs_new_protected:Npn \muskip_show:n
-  { \__msg_show_wrap:Nn \muskip_eval:n }
+  { \msg_show_eval:Nn \muskip_eval:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2161,7 +2161,7 @@
 \cs_new_eq:NN \muskip_log:N \__kernel_register_log:N
 \cs_new_eq:NN \muskip_log:c \__kernel_register_log:c
 \cs_new_protected:Npn \muskip_log:n
-  { \__msg_log_next: \muskip_show:n }
+  { \msg_log_eval:Nn \muskip_eval:n }
 %    \end{macrocode}
 % \end{macro}
 %
