Remove \__msg_show_variable and some related functions (see #419)
This is a step towards using fewer foreign internals.  I've put a
couple functions in l3candidates but the next few commits might
delete them.

--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -229,8 +229,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \flag_show:n #1
   {
-    \exp_args:Nc \__msg_show_variable:NNNnn { flag~#1 } \cs_if_exist:NTF ? { }
-      { > ~ flag ~ #1 ~ height = \flag_height:n {#1} }
+    \exp_args:Nc \__kernel_check_defined:NT { flag~#1 }
+      { \__msg_show_wrap:n { > ~ \tl_to_str:n { flag~#1~height } = \flag_height:n {#1} } }
   }
 \cs_new_protected:Npn \flag_log:n
   { \__msg_log_next: \flag_show:n }
