--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -894,8 +894,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \bool_show:N #1
   {
-    \__msg_show_variable:NNNnn #1 \bool_if_exist:NTF ? { }
-      { > ~ \token_to_str:N #1 = \@@_to_str:n {#1} }
+    \__kernel_check_defined:NT #1
+      { \__msg_show_wrap:n { > ~ \token_to_str:N #1 = \@@_to_str:n {#1} } }
   }
 \cs_new_protected:Npn \bool_show:n
   { \msg_show_eval:Nn \@@_to_str:n }
