--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -3351,12 +3351,13 @@
 %
 % \subsubsection{Showing regexes}
 %
-% \begin{macro}{\@@_show:Nn}
+% \begin{macro}{\@@_show:N}
 %   Within a \cs{__tl_build:Nw} \ldots{} \cs{__tl_build_end:} group, we
 %   redefine all the function that can appear in a compiled regex, then
-%   run the regex. The result is then shown.
+%   run the regex. The result stored in \cs{l_@@_internal_a_tl} is then
+%   meant to be shown.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_show:Nn #1#2
+\cs_new_protected:Npn \@@_show:N #1
   {
     \__tl_build:Nw \l_@@_internal_a_tl
       \cs_set_protected:Npn \@@_branch:n
@@ -3406,8 +3407,6 @@
       \@@_show_push:n { ~ }
       \cs_if_exist_use:N #1
     \__tl_build_end:
-    \__msg_show_variable:NNNnn #1 \cs_if_exist:NTF ? { }
-      { >~Compiled~regex~#2: \l_@@_internal_a_tl }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3421,7 +3420,7 @@
     \int_incr:N \l_@@_show_lines_int
     \__tl_build_one:x
       {
-        \exp_not:N \\
+        \exp_not:N \iow_newline:
         \seq_map_function:NN \l_@@_show_prefix_seq \use:n
         #1
       }
@@ -5613,16 +5612,26 @@
 % \begin{macro}{\regex_show:N, \regex_show:n}
 %   User functions: the \texttt{n} variant requires compilation first.
 %   Then show the variable with some appropriate text. The auxiliary
-%   \cs{@@_show:Nx} is defined in a different section.
+%   is defined in a different section.
 %    \begin{macrocode}
 \cs_new_protected:Npn \regex_show:n #1
   {
     \@@_compile:n {#1}
-    \@@_show:Nn \l_@@_internal_regex
-      { { \tl_to_str:n {#1} } }
+    \@@_show:N \l_@@_internal_regex
+    \msg_show_list:nnxxxx { LaTeX / kernel } { show-regex }
+      { \tl_to_str:n {#1} } { }
+      { \l_@@_internal_a_tl } { }
   }
 \cs_new_protected:Npn \regex_show:N #1
-  { \@@_show:Nn #1 { variable~\token_to_str:N #1 } }
+  {
+    \__kernel_check_defined:NT #1
+      {
+        \@@_show:N #1
+        \msg_show_list:nnxxxx { LaTeX / kernel } { show-regex }
+          { } { \token_to_str:N #1 }
+          { \l_@@_internal_a_tl } { }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -6433,6 +6442,16 @@
   {
     There~ \int_compare:nTF { #1 = 1 } { was } { were } ~ #1~
     missing~right~\int_compare:nTF { #1 = 1 } { parenthesis } { parentheses } .
+  }
+%    \end{macrocode}
+%
+% Used when showing a regex.
+%    \begin{macrocode}
+\__msg_kernel_new:nnn { kernel } { show-regex }
+  {
+    >~Compiled~regex~
+    \tl_if_empty:nTF {#1} { variable~ #2 } { {#1} } :
+    #3
   }
 %    \end{macrocode}
 %
