--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -2778,22 +2778,29 @@
 % ^^A todo: try to avoid kernel internals!
 % \begin{macro}{\bigint_show:N, \bigint_show:c, \bigint_show:n}
 % \begin{macro}{\bigint_log:N, \bigint_log:c, \bigint_log:n}
-%   This sadly uses kernel internals.
+% \begin{macro}{\@@_show_aux:nN}
+%   This sadly uses kernel internals.  If the variable is not defined,
+%   throw the same error as \cs{tl_show:N} by simply calling that
+%   function.
 %    \begin{macrocode}
-\cs_new_protected:Npn \bigint_show:N #1
+\cs_new_protected:Npn \bigint_show:N
+  { \@@_show_aux:nN { \__msg_show_wrap:n } }
+\cs_new_protected:Npn \bigint_log:N
+  { \@@_show_aux:nN { \__msg_log_next: \__msg_show_wrap:n } }
+\cs_new_protected:Npn \@@_show_aux:nN #1#2
   {
-    \__msg_show_variable:NNNnn #1 \bigint_if_exist:NTF ? { }
-      { > ~ \token_to_str:N #1 = \bigint_use:N #1 }
+    \cs_if_exist:NTF #2
+      { #1 { > ~ \token_to_str:N #2 = \bigint_use:N #2 } }
+      { \tl_show:N #2 }
   }
 \cs_new_protected:Npn \bigint_show:n
   { \msg_show_eval:Nn \bigint_eval:n }
 \cs_generate_variant:Nn \bigint_show:N { c }
-\cs_new_protected:Npn \bigint_log:N
-  { \__msg_log_next: \bigint_show:N }
 \cs_new_protected:Npn \bigint_log:n
   { \msg_log_eval:Nn \bigint_eval:n }
 \cs_generate_variant:Nn \bigint_log:N { c }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
