--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1011,7 +1011,7 @@
   {
     \group_begin:
       \cs_set_eq:NN \ \c_space_tl
-      \cs_set:Npn \\ { \exp_not:n { \\ > ~ } }
+      \cs_set:Npn \\ { \iow_newline: > ~ }
       \tex_lowercase:D { \tl_set:Nn \l__char_lowercase_tl {#1} }
       \tex_uppercase:D { \tl_set:Nn \l__char_uppercase_tl {#1} }
       \tl_set:Nx \l__char_internal_tl
@@ -1059,8 +1059,8 @@
           \tl_put_right:Nx \l__char_internal_tl
             { \\ not ~ in ~ current ~ font }
         }
-      \__msg_show_pre:nnnnnn { LaTeX/kernel } { show-char } {#1} { } { } { }
-      \__msg_show_wrap:n { \l__char_internal_tl }
+      \msg_show_list:nnxxxx { LaTeX/kernel } { show-char }
+        { \tl_to_str:n {#1} } { \tl_to_str:N \l__char_internal_tl } { } { }
     \group_end:
   }
 \cs_new_protected:Npn \__char_show_in_font:
@@ -1147,7 +1147,7 @@
 \__msg_kernel_new:nnn { kernel } { show-char }
   {
     The ~ character ~ '#1' ~ has ~ character ~ code ~
-    \int_eval:n { `#1 } , ~ and ~ properties
+    \int_eval:n { `#1 } , ~ and ~ properties #2
   }
 %    \end{macrocode}
 % \end{macro}
