--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -390,31 +390,25 @@
 %
 % \subsection{Showing misc stuff}
 %
-% \begin{macro}{\trace_show_variable:nw}
 %    \begin{macrocode}
-\cs_new:Npn \trace_show_variable:nw #1
-  {
-    \iow_newline: > \c_space_tl \c_space_tl \exp_not:n {#1}
-    \c_space_tl \c_space_tl => \c_space_tl \c_space_tl
-  }
+\cs_generate_variant:Nn \msg_show_item_unbraced:nn { nV }
 %    \end{macrocode}
-% \end{macro}
 %
 % \begin{macro}{\trace_show_marks:}
 %    Show the current meaning of the different marks on the page.
 %    \begin{macrocode}
 \cs_new_protected:Npn \trace_show_marks:
   {
-    \__msg_show_pre:nnnnnn { trace } { show-marks } { } { } { } { }
-    \__msg_show_wrap:n
+    \msg_show_list:nnxxxx { LaTeX/trace } { show-marks }
       {
-        \trace_show_variable:nw { topmark   } \exp_not:V \tex_topmark:D
-        \trace_show_variable:nw { firstmark } \exp_not:V \tex_firstmark:D
-        \trace_show_variable:nw { botmark   } \exp_not:V \tex_botmark:D
+        \msg_show_item_unbraced:nV { topmark   } \tex_topmark:D
+        \msg_show_item_unbraced:nV { firstmark } \tex_firstmark:D
+        \msg_show_item_unbraced:nV { botmark   } \tex_botmark:D
       }
+      { } { } { }
   }
 \__msg_kernel_new:nnn { trace } { show-marks }
-  { The~marks~on~this~page~are }
+  { The~marks~on~this~page~are #1 }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -424,8 +418,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \trace_show_float_lists:
   {
-    \__msg_show_pre:nnnnnn { trace } { show-float-lists } { } { } { } { }
-    \__msg_show_wrap:n
+    \msg_show_list:nnxxxx { trace } { show-float-lists }
       {
         \trace_show_float_list_aux:n { free }
         \trace_show_float_list_aux:n { active }
@@ -434,13 +427,13 @@
         \trace_show_float_list_aux:n { here }
         \clist_map_function:NN \g_xor_areas_used_clist
           \trace_show_float_area_aux:n
-        \trace_show_variable:nw { currbox } \tl_to_str:N \g_xor_curr_float_box_tl
-        \trace_show_variable:nw { this@float } \tl_to_str:N \g_xor_this_float_box_tl
+        \msg_show_item_unbraced:nV { currbox } \g_xor_curr_float_box_tl
+        \msg_show_item_unbraced:nV { this@float } \g_xor_this_float_box_tl
       }
   }
 \cs_new:Npn \trace_show_float_list_aux:n #1
   {
-    \trace_show_variable:nw { #1 }
+    \msg_show_item_unbraced:nn { #1 } { }
     \exp_args:Nc \seq_to_str:N { g_or_float_#1_seq }
   }
 \cs_new:Npn \trace_show_float_area_aux:n #1
@@ -449,8 +442,8 @@
       {
         \seq_if_empty:cF { g_xor_area_#1_float_seq }
           {
-            \trace_show_variable:nw { #1 }
-              \seq_to_str:c { g_xor_area_#1_float_seq }
+            \msg_show_item_unbraced:nn { #1 } { }
+            \seq_to_str:c { g_xor_area_#1_float_seq }
           }
       }
   }
