--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1115,14 +1115,10 @@
 %</package>
     \seq_concat:NNN \l_@@_tmp_seq \l_@@_tmp_seq \g_@@_record_seq
     \seq_remove_duplicates:N \l_@@_tmp_seq
-    \__msg_show_wrap:n
-      {
-        >~File~List~< \\
-        \seq_map_function:NN \l_@@_tmp_seq \@@_list_aux:n
-        ............
-      }
+    \msg_show_list:nnxxxx { LaTeX/kernel } { file-list }
+      { \seq_map_function:NN \l_@@_tmp_seq \@@_list_aux:n } { } { } { }
   }
-\cs_new:Npn \@@_list_aux:n #1 { #1 \\ }
+\cs_new:Npn \@@_list_aux:n #1 { \iow_newline: #1 }
 \cs_new_protected:Npn \file_log_list:
   { \__msg_log_next: \file_show_list: }
 %    \end{macrocode}
@@ -1338,7 +1334,7 @@
 %   stream is open and non-empty (in fact a question mark) otherwise.
 %   The code of the message \texttt{show-streams} takes care of
 %   translating |ior|/|iow| to English.  The list of streams is
-%   formatted using \cs{__msg_show_item_unbraced:nn}.
+%   formatted using \cs{msg_show_item_unbraced:nn}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \ior_show_list:
   { \@@_list:Nn \g_@@_streams_prop { ior } }
@@ -1346,10 +1342,10 @@
   { \__msg_log_next: \ior_show_list: }
 \cs_new_protected:Npn \@@_list:Nn #1#2
   {
-    \__msg_show_pre:nnxxxx { LaTeX / kernel } { show-streams }
-      {#2} { \prop_if_empty:NF #1 { ? } } { } { }
-    \__msg_show_wrap:n
-      { \prop_map_function:NN #1 \__msg_show_item_unbraced:nn }
+    \msg_show_list:nnxxxx { LaTeX / kernel } { show-streams }
+      { \tl_to_str:n {#2} }
+      { \prop_map_function:NN #1 \msg_show_item_unbraced:nn }
+      { } { }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2323,6 +2319,12 @@
   {
     The~requested~file~could~not~be~found~in~the~current~directory,~
     in~the~TeX~search~path~or~in~the~LaTeX~search~path.
+  }
+\__msg_kernel_new:nnn { kernel } { file-list }
+  {
+    >~File~List~<
+    #1 \\
+    ............
   }
 \__msg_kernel_new:nnnn { kernel } { input-streams-exhausted }
   { Input~streams~exhausted }
