--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1191,27 +1191,29 @@
 %
 % \subsection{Viewing property lists}
 %
-% \begin{macro}[tested = m3show001]{\prop_show:N, \prop_show:c}
-%   Apply the general \cs{__msg_show_variable:NNNnn}. Contrarily
-%   to sequences and comma lists, we use \cs{__msg_show_item:nn}
-%   to format both the key and the value for each pair.
+% \begin{macro}[tested = m3show001]
+%   {\prop_show:N, \prop_show:c, \prop_log:N, \prop_log:c}
+%   Apply the general \cs{__kernel_check_defined:NT} and
+%   \cs{msg_show_list:nnnnnn}. Contrarily to sequences and comma lists,
+%   we use \cs{msg_show_item:nn} to format both the key and the value
+%   for each pair.
 %    \begin{macrocode}
-\cs_new_protected:Npn \prop_show:N #1
-  {
-    \__msg_show_variable:NNNnn #1
-      \prop_if_exist:NTF \prop_if_empty:NTF { prop }
-      { \prop_map_function:NN #1 \__msg_show_item:nn }
-  }
+\cs_new_protected:Npn \prop_show:N
+  { \@@_show:NN \msg_show_list:nnxxxx }
 \cs_generate_variant:Nn \prop_show:N { c }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}{\prop_log:N, \prop_log:c}
-%   Redirect output of \cs{prop_show:N} to the log.
-%    \begin{macrocode}
 \cs_new_protected:Npn \prop_log:N
-  { \__msg_log_next: \prop_show:N }
+  { \@@_show:NN \msg_log_list:nnxxxx }
 \cs_generate_variant:Nn \prop_log:N { c }
+\cs_new_protected:Npn \@@_show:NN #1#2
+  {
+    \__kernel_check_defined:NT #2
+      {
+        #1 { LaTeX/kernel } { show-prop }
+          { \token_to_str:N #2 }
+          { \prop_map_function:NN #2 \msg_show_item:nn }
+          { } { }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
