--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -2537,11 +2537,11 @@
   }
 \cs_new_protected:Npn \@@_show:Nnnn #1#2#3#4
   {
-    \__msg_show_pre:nnnnnn { xtemplate }
-      { \prop_if_empty:NTF #1 { show-no-attribute } { show-attribute } }
-      {#2} {#3} {#4} { }
-    \__msg_show_wrap:n
-      { \prop_map_function:NN #1 \__msg_show_item_unbraced:nn }
+    \msg_show_list:nnxxxx { xtemplate } { show-attribute }
+      { \tl_to_str:n {#2} }
+      { \tl_to_str:n {#3} }
+      { \tl_to_str:n {#4} }
+      { \prop_map_function:NN #1 \msg_show_item_unbraced:nn }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2556,23 +2556,13 @@
     \@@_if_instance_exist:nnnT {#1} {#2} {#3}
       {
         \@@_recover_values:n { #1 / #2 / #3 }
-        \prop_if_empty:NTF \l_@@_values_prop
+        \msg_show_list:nnxxxx { xtemplate } { show-values }
+          { \tl_to_str:n {#1} }
+          { \tl_to_str:n {#2} }
+          { \tl_to_str:n {#3} }
           {
-            \__msg_show_pre:nnnnnn { xtemplate } { show-no-values }
-              {#1} {#2} {#3} { }
-            \__msg_show_wrap:n { }
-          }
-          {
-            \prop_pop:NnNF \l_@@_values_prop { from~template }
-              \l_@@_tmp_tl
-              { \tl_clear:N \l_@@_tmp_tl }
-            \__msg_show_pre:nnnnnV { xtemplate } { show-values }
-              {#1} {#2} {#3} \l_@@_tmp_tl
-            \__msg_show_wrap:n
-              {
-                \prop_map_function:NN \l_@@_values_prop
-                  \__msg_show_item_unbraced:nn
-              }
+            \prop_map_function:NN \l_@@_values_prop
+              \msg_show_item_unbraced:nn
           }
       }
   }
@@ -2769,23 +2759,18 @@
     Declaring~interface~for~template~'#2'~of~object~type~'#1'~
     \msg_line_context:.
   }
-\msg_new:nnn { xtemplate } { show-no-attribute }
-  { The~template~'#2'~of~object~type~'#1'~has~no~#3 . }
 \msg_new:nnn { xtemplate } { show-attribute }
-  { The~template~'#2'~of~object~type~'#1'~has~#3 : }
-\msg_new:nnn { xtemplate } { show-no-values }
   {
-    The~ \tl_if_empty:nF {#2} {collection~} instance~'#3'~
-    \tl_if_empty:nF {#2} { (from~collection~'#2')~ }
-    of~object~type~'#1'~has~no~values.
+    The~template~'#2'~of~object~type~'#1'~has~
+    \tl_if_empty:nTF {#4} { no~#3. } { #3 : #4 }
   }
 \msg_new:nnn { xtemplate } { show-values }
   {
-    The~ \tl_if_empty:nF {#2} {collection~} instance~'#3'~
-    \tl_if_empty:nF {#2} { (from~collection~'#2')~ }
-    of~object~type~'#1'~
-    \tl_if_empty:nF {#4} { (from~template~'#4')~ }
-    has~values:
+    \tl_if_empty:nTF {#2}
+      { The~instance~'#3'~ }
+      { The~collection~ instance~'#3'~ (from~collection~'#2')~ }
+    of~object~type~'#1'~has~
+    \tl_if_empty:nTF {#4} { no~values. } { values: #4 }
   }
 %    \end{macrocode}
 %
