--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -780,7 +780,6 @@
 % \subsection{Diagnostics}
 %
 % \begin{macro}{\color_show:n}
-% \begin{macro}[aux]{\@@_show:n}
 % \begin{macro}[aux]{\@@_show:w}
 % \begin{macro}[aux]{\@@_show_gray:w, \@@_show_rgb:w, \@@_show_cmyk:w}
 %   Extract the information about a color and format for the user: the approach
@@ -788,38 +787,26 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_show:n #1
   {
-    \@@_if_defined:nTF {#1}
+    \msg_show_list:nnxxxx { LaTeX / color } { show }
+      {#1}
       {
-        \__msg_show_pre:nnxxxx { LaTeX / color } { show }
-          {#1} { t } { } { }
-        \exp_args:Nv \@@_show:n { l_@@_named_ #1 _tl }
+        \@@_if_defined:nTF {#1}
+          { \exp_last_unbraced:Nv \@@_show:w { l_@@_named_ #1 _tl } \q_stop }
+          { }
       }
-      {
-        \__msg_show_pre:nnxxxx { LaTeX / color } { show }
-          {#1} { f } { } { }
-        \__msg_show_wrap:n { }
-      }
+      { }
+      { }
   }
-\cs_new_protected:Npn \@@_show:n #1
-  { \@@_show:w #1 \q_stop }
-\cs_new_protected:Npn \@@_show:w #1 ~ #2 \q_stop
+\cs_new:Npn \@@_show:w #1 ~ #2 \q_stop
   {
-    \use:x
-      {
-        \__msg_show_wrap:n
-          {
-            \exp_not:N \__msg_show_item_unbraced:nn { model }
-              {#1}
-            \exp_not:N \__msg_show_item_unbraced:nn { value }
-              { \use:c { @@_show_ #1 :w } #2 \q_stop }
-          }
-      }
+    \msg_show_item_unbraced:nn { model } {#1}
+    \exp_args:Nnf \msg_show_item_unbraced:nn { value }
+      { \use:c { @@_show_ #1 :w } #2 \q_stop }
   }
 \cs_new:Npn \@@_show_gray:w #1 \q_stop { #1 }
 \cs_new:Npn \@@_show_rgb:w #1 ~ #2 ~ #3 \q_stop { #1 ,~ #2 ,~ #3 }
 \cs_new:Npn \@@_show_cmyk:w #1 ~ #2 ~ #3 ~ #4 \q_stop { #1 ,~ #2 ,~ #3 ,~ #4 }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -845,9 +832,9 @@
 \__msg_kernel_new:nnn { color } { show }
   {
     The~color~#1~
-    \str_if_eq:nnTF {#2} { t }
-      { has~the~properties: }
+    \tl_if_empty:nTF {#2}
       { is~undefined. }
+      { has~the~properties: #2 }
   }
 % \end{macrocode}
 %
