Base "show" functions on \tl_show:n and new \msg_show:nn (see #419)
This drastically reduces the use of \__msg functions and should give good
clean examples for the few package writers who misused the internals.

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -1824,13 +1824,11 @@
 %
 % \begin{macro}{\clist_show:N, \clist_show:c, \clist_log:N, \clist_log:c, \@@_show:NN}
 %   Apply the general \cs{__kernel_check_defined:NT} and
-%   \cs{msg_show_list:nnnnnn}.
+%   \cs{msg_show:nnnnnn}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \clist_show:N
-  { \@@_show:NN \msg_show_list:nnxxxx }
+\cs_new_protected:Npn \clist_show:N { \@@_show:NN \msg_show:nnxxxx }
 \cs_generate_variant:Nn \clist_show:N { c }
-\cs_new_protected:Npn \clist_log:N
-  { \@@_show:NN \msg_log_list:nnxxxx }
+\cs_new_protected:Npn \clist_log:N { \@@_show:NN \msg_log:nnxxxx }
 \cs_generate_variant:Nn \clist_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
@@ -1849,10 +1847,8 @@
 %   A variant of the above: no existence check, empty first argument for
 %   the message.
 %    \begin{macrocode}
-\cs_new_protected:Npn \clist_show:n
-  { \@@_show:Nn \msg_show_list:nnxxxx }
-\cs_new_protected:Npn \clist_log:n
-  { \@@_show:Nn \msg_log_list:nnxxxx }
+\cs_new_protected:Npn \clist_show:n { \@@_show:Nn \msg_show:nnxxxx }
+\cs_new_protected:Npn \clist_log:n { \@@_show:Nn \msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_show:Nn #1#2
   {
     #1 { LaTeX/kernel } { show-clist }
