--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -223,17 +223,20 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\flag_show:n, \flag_log:n}
+% \begin{macro}{\flag_show:n, \flag_log:n, \@@_show:Nn}
 %   Show the height (terminal or log file) using appropriate \pkg{l3msg}
 %   auxiliaries.
 %    \begin{macrocode}
-\cs_new_protected:Npn \flag_show:n #1
+\cs_new_protected:Npn \flag_show:n { \@@_show:Nn \tl_show:n }
+\cs_new_protected:Npn \flag_log:n { \@@_show:Nn \tl_log:n }
+\cs_new_protected:Npn \@@_show:Nn #1#2
   {
-    \exp_args:Nc \__kernel_check_defined:NT { flag~#1 }
-      { \__msg_show_wrap:n { > ~ \tl_to_str:n { flag~#1~height } = \flag_height:n {#1} } }
+    \exp_args:Nc \__kernel_check_defined:NT { flag~#2 }
+      {
+        \exp_args:Nx #1
+          { \tl_to_str:n { flag~#2~height } = \flag_height:n {#2} }
+      }
   }
-\cs_new_protected:Npn \flag_log:n
-  { \__msg_log_next: \flag_show:n }
 %    \end{macrocode}
 % \end{macro}
 %
