--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -2537,7 +2537,7 @@
   }
 \cs_new_protected:Npn \@@_show:Nnnn #1#2#3#4
   {
-    \msg_show_list:nnxxxx { xtemplate } { show-attribute }
+    \msg_show:nnxxxx { xtemplate } { show-attribute }
       { \tl_to_str:n {#2} }
       { \tl_to_str:n {#3} }
       { \tl_to_str:n {#4} }
@@ -2556,7 +2556,7 @@
     \@@_if_instance_exist:nnnT {#1} {#2} {#3}
       {
         \@@_recover_values:n { #1 / #2 / #3 }
-        \msg_show_list:nnxxxx { xtemplate } { show-values }
+        \msg_show:nnxxxx { xtemplate } { show-values }
           { \tl_to_str:n {#1} }
           { \tl_to_str:n {#2} }
           { \tl_to_str:n {#3} }
