--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -2775,22 +2775,21 @@
 %
 % \subsection{Viewing big integers}
 %
-% ^^A todo: try to avoid kernel internals!
 % \begin{macro}{\bigint_show:N, \bigint_show:c, \bigint_show:n}
 % \begin{macro}{\bigint_log:N, \bigint_log:c, \bigint_log:n}
-% \begin{macro}{\@@_show_aux:nN}
+% \begin{macro}{\@@_show_aux:NN}
 %   This sadly uses kernel internals.  If the variable is not defined,
 %   throw the same error as \cs{tl_show:N} by simply calling that
 %   function.
 %    \begin{macrocode}
 \cs_new_protected:Npn \bigint_show:N
-  { \@@_show_aux:nN { \__msg_show_wrap:n } }
+  { \@@_show_aux:NN \tl_show:n }
 \cs_new_protected:Npn \bigint_log:N
-  { \@@_show_aux:nN { \__msg_log_next: \__msg_show_wrap:n } }
-\cs_new_protected:Npn \@@_show_aux:nN #1#2
+  { \@@_show_aux:NN \tl_log:n }
+\cs_new_protected:Npn \@@_show_aux:NN #1#2
   {
     \cs_if_exist:NTF #2
-      { #1 { > ~ \token_to_str:N #2 = \bigint_use:N #2 } }
+      { \exp_args:Nx #1 { \token_to_str:N #2 = \bigint_use:N #2 } }
       { \tl_show:N #2 }
   }
 \cs_new_protected:Npn \bigint_show:n
