--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -787,7 +787,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_show:n #1
   {
-    \msg_show_list:nnxxxx { LaTeX / color } { show }
+    \msg_show:nnxxxx { LaTeX / color } { show }
       {#1}
       {
         \@@_if_defined:nTF {#1}
