--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -3454,80 +3454,71 @@
       {
         \__msg_kernel_error:nnx { kernel } { variable-not-defined }
           { \token_to_str:N #1 }
-        \bool_gset_false:N \g__msg_log_next_bool
       }
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_register_show:N, \@@_register_show:c}
-% \begin{macro}{\@@_register_show_aux:n}
+% \begin{macro}
+%   {\@@_register_show:N, \@@_register_show:c, \@@_register_log:N, \@@_register_log:c}
+% \begin{macro}{\@@_register_show_aux:NN, \@@_register_show_aux:nNN}
 %   Simply using the \tn{showthe} primitive does not allow for
-%   line-wrapping, so instead use \cs{__msg_show_wrap:n} (defined
-%   in \pkg{l3msg}).  This displays
+%   line-wrapping, so instead use \cs{tl_show:n} and \cs{tl_log:n} (defined
+%   in \pkg{l3tl} and that performs line-wrapping).  This displays
 %   |>~|\meta{variable}|=|\meta{value}.  We expand the value before-hand
 %   as otherwise some integers (such as \tn{currentgrouplevel} or
 %   \tn{currentgrouptype}) altered by the line-wrapping code would show
 %   wrong values.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_register_show:N #1
-  {
-    \@@_check_defined:NT #1
-      { \exp_args:No \@@_register_show_aux:nN { \tex_the:D #1 } #1 }
-  }
-\cs_new_protected:Npn \@@_register_show_aux:nN #1#2
-  { \__msg_show_wrap:n { > ~ \token_to_str:N #2 = \tl_to_str:n {#1} } }
+\cs_new_protected:Npn \@@_register_show:N
+  { \@@_register_show_aux:NN \tl_show:n }
 \cs_new_protected:Npn \@@_register_show:c
   { \exp_args:Nc \@@_register_show:N }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\@@_register_log:N, \@@_register_log:c}
-%   Redirect the output of \cs{@@_register_show:N} to the log.
-%    \begin{macrocode}
 \cs_new_protected:Npn \@@_register_log:N
-  { \__msg_log_next: \@@_register_show:N }
+  { \@@_register_show_aux:NN \tl_log:n }
 \cs_new_protected:Npn \@@_register_log:c
   { \exp_args:Nc \@@_register_log:N }
+\cs_new_protected:Npn \@@_register_show_aux:NN #1#2
+  {
+    \@@_check_defined:NT #2
+      {
+        \exp_args:No \@@_register_show_aux:nNN
+          { \tex_the:D #2 } #2 #1
+      }
+  }
+\cs_new_protected:Npn \@@_register_show_aux:nNN #1#2#3
+  { \exp_args:No #3 { \token_to_str:N #2 = #1 } }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}{\cs_show:N, \cs_show:c}
+% \begin{macro}{\cs_show:N, \cs_show:c, \cs_log:N, \cs_log:c, \@@_show:NN}
 %   Some control sequences have a very long name or meaning.  Thus,
 %   simply using \TeX{}'s primitive \tn{show} could lead to overlong
 %   lines.  The output of this primitive is mimicked to some extent,
-%   then the re-built string is given to \cs{iow_wrap:nnnN} for
+%   then the re-built string is given to \cs{tl_show:n} or \cs{tl_log:n} for
 %   line-wrapping.  We must expand the meaning before passing it to the
 %   wrapping code as otherwise we would wrongly see the definitions that
 %   are in place there.  To get correct escape characters, set the
 %   \tn{escapechar} in a group; this also localizes the assignment
-%   performed by \texttt{x}-expansion.  The \cs{cs_show:c} command also
-%   converts its argument to a control sequence within a group to avoid
+%   performed by \texttt{x}-expansion.  The \cs{cs_show:c} and \cs{cs_log:c} commands
+%   convert their argument to a control sequence within a group to avoid
 %   showing \tn{relax} for undefined control sequences.
 %    \begin{macrocode}
-\cs_new_protected:Npn \cs_show:N #1
+\cs_new_protected:Npn \cs_show:N { \@@_show:NN \tl_show:n }
+\cs_new_protected:Npn \cs_show:c
+  { \group_begin: \exp_args:NNc \group_end: \cs_show:N }
+\cs_new_protected:Npn \cs_log:N { \@@_show:NN \tl_log:n }
+\cs_new_protected:Npn \cs_log:c
+  { \group_begin: \exp_args:NNc \group_end: \cs_log:N }
+\cs_new_protected:Npn \@@_show:NN #1#2
   {
     \group_begin:
       \int_set:Nn \tex_escapechar:D { `\\ }
       \exp_args:NNx
     \group_end:
-    \__msg_show_wrap:n { > ~ \token_to_str:N #1 = \cs_meaning:N #1 }
+    #1 { \token_to_str:N #2 = \cs_meaning:N #2 }
   }
-\cs_new_protected:Npn \cs_show:c
-  { \group_begin: \exp_args:NNc \group_end: \cs_show:N }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}{\cs_log:N, \cs_log:c}
-%   Use \cs{cs_show:N} or \cs{cs_show:c} after calling
-%   \cs{__msg_log_next:} to redirect their output to the log file only.
-%   Note that \cs{cs_log:c} is not just a variant of \cs{cs_log:N} as
-%   the csname should be turned to a control sequence within a group
-%   (see \cs{cs_show:c}).
-%    \begin{macrocode}
-\cs_new_protected:Npn \cs_log:N { \__msg_log_next: \cs_show:N }
-\cs_new_protected:Npn \cs_log:c { \__msg_log_next: \cs_show:c }
 %    \end{macrocode}
 % \end{macro}
 %
