--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -1656,40 +1656,41 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\coffin_show_structure:N, \coffin_show_structure:c}
+% \begin{macro}
+%   {
+%     \coffin_show_structure:N, \coffin_show_structure:c,
+%     \coffin_log_structure:N, \coffin_log_structure:c,
+%     \@@_show_structure:NN
+%   }
 %   For showing the various internal structures attached to a coffin in
 %   a way that keeps things relatively readable. If there is no apparent
 %   structure then the code complains.
 %    \begin{macrocode}
-\cs_new_protected:Npn \coffin_show_structure:N #1
+\cs_new_protected:Npn \coffin_show_structure:N
+  { \@@_show_structure:NN \msg_show:nnxxxx }
+\cs_generate_variant:Nn \coffin_show_structure:N { c }
+\cs_new_protected:Npn \coffin_log_structure:N
+  { \@@_show_structure:NN \msg_log:nnxxxx }
+\cs_generate_variant:Nn \coffin_log_structure:N { c }
+\cs_new_protected:Npn \@@_show_structure:NN #1#2
   {
-    \@@_if_exist:NT #1
+    \@@_if_exist:NT #2
       {
-        \msg_show_list:nnxxxx { LaTeX / kernel } { show-coffin }
-          { \token_to_str:N #1 }
+        #1 { LaTeX / kernel } { show-coffin }
+          { \token_to_str:N #2 }
           {
-            \iow_newline: >~ ht ~=~ \dim_eval:n { \coffin_ht:N #1 }
-            \iow_newline: >~ dp ~=~ \dim_eval:n { \coffin_dp:N #1 }
-            \iow_newline: >~ wd ~=~ \dim_eval:n { \coffin_wd:N #1 }
+            \iow_newline: >~ ht ~=~ \dim_eval:n { \coffin_ht:N #2 }
+            \iow_newline: >~ dp ~=~ \dim_eval:n { \coffin_dp:N #2 }
+            \iow_newline: >~ wd ~=~ \dim_eval:n { \coffin_wd:N #2 }
           }
           {
             \prop_map_function:cN
-              { l_@@_poles_ \__int_value:w #1 _prop }
+              { l_@@_poles_ \int_eval:n {#2} _prop }
               \msg_show_item_unbraced:nn
           }
           { }
       }
   }
-\cs_generate_variant:Nn \coffin_show_structure:N { c }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}{\coffin_log_structure:N, \coffin_log_structure:c}
-%   Redirect output of \cs{coffin_show_structure:N} to the log.
-%    \begin{macrocode}
-\cs_new_protected:Npn \coffin_log_structure:N
-  { \__msg_log_next: \coffin_show_structure:N }
-\cs_generate_variant:Nn \coffin_log_structure:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1717,7 +1718,7 @@
 \__msg_kernel_new:nnn { kernel } { show-coffin }
   {
     Size~of~coffin~#1 : #2 \\
-    Poles~of~coffin~#1 : #3
+    Poles~of~coffin~#1 : #3 .
   }
 %    \end{macrocode}
 %
