--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -683,33 +683,6 @@
 %
 % \section{Internal \pkg{l3msg} functions}
 %
-% The following functions are used in several kernel modules.
-%
-% \begin{function}[added = 2015-08-05]{\__msg_log_next:}
-%   \begin{syntax}
-%     \cs{__msg_log_next:} \meta{show-command}
-%   \end{syntax}
-%   Causes the next \meta{show-command} to send its output to the log
-%   file instead of the terminal.  This allows for instance
-%   \cs{cs_log:N} to be defined as \cs{__msg_log_next:} \cs{cs_show:N}.
-%   The effect of this command lasts until the next use of
-%   \cs{msg_show_eval:Nn} or \cs{__msg_show_wrap:n} or
-%   \cs{msg_show_list:nnnnnn}, in other words until the next time
-%   the \eTeX{} primitive \tn{showtokens} would have been used for
-%   showing to the terminal or until the next
-%   \texttt{variable-not-defined} error.
-% \end{function}
-%
-% \begin{function}[added = 2015-08-03]{\__msg_show_wrap:n}
-%   \begin{syntax}
-%     \cs{__msg_show_wrap:n} \Arg{formatted text}
-%   \end{syntax}
-%   Shows or logs the \meta{formatted text}.  After expansion,
-%   unless it is empty, the \meta{formatted text} must contain |>|,
-%   and the part of \meta{formatted text} before the first |>| is
-%   removed. Failure to do so causes low-level \TeX{} errors.
-% \end{function}
-%
 % \begin{variable}{\c__msg_coding_error_text_tl}
 %   The text
 %   \begin{verbatim}
@@ -1328,6 +1301,68 @@
 %    \begin{macrocode}
   \@@_class_new:nn { none } { }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \msg_show:nnnnnn ,
+%     \msg_show:nnnnn  ,
+%     \msg_show:nnnn   ,
+%     \msg_show:nnn    ,
+%     \msg_show:nn     ,
+%     \msg_show:nnxxxx ,
+%     \msg_show:nnxxx  ,
+%     \msg_show:nnxx   ,
+%     \msg_show:nnx
+%   }
+% \begin{macro}[aux]{\@@_show:n, \@@_show:w, \@@_show_dot:w, \@@_show:nn}
+%   The \texttt{show} message type is used for \cs{seq_show:N} and
+%   similar complicated data structures.  Wrap the given text with a
+%   trailing dot (important later) then pass it to \cs{@@_show:n}.  If
+%   there is |\\>~| (or if the whole thing starts with |>~|) we split
+%   there, print the first part and show the second part using
+%   \tn{showtokens} (the \cs{exp_after:wN} ensure a nice display).  Note
+%   that that primitive adds a leading |>~| and trailing dot.  That is
+%   why we included a trailing dot before wrapping and removed it
+%   afterwards.  If there is no |\\>~| do the same but with an empty
+%   second part which adds a spurious but inevitable |>~.|
+%    \begin{macrocode}
+  \@@_class_new:nn { show }
+    {
+      \iow_wrap:nnnN
+        { \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6} }
+        { } { } \@@_show:n
+    }
+  \cs_new_protected:Npn \@@_show:n #1
+    {
+      \tl_if_in:nnTF { ^^J #1 } { ^^J > ~ }
+        {
+          \tl_if_in:nnTF { #1 \q_mark } { . \q_mark }
+            { \@@_show_dot:w } { \@@_show:w }
+          ^^J #1 \q_stop
+        }
+        { \@@_show:nn { ? #1 } { } }
+    }
+  \cs_new:Npn \@@_show_dot:w #1 ^^J > ~ #2 . \q_stop
+    { \@@_show:nn {#1} {#2} }
+  \cs_new:Npn \@@_show:w #1 ^^J > ~ #2 \q_stop
+    { \@@_show:nn {#1} {#2} }
+  \cs_new_protected:Npn \@@_show:nn #1#2
+    {
+      \tl_if_empty:nF {#1}
+        { \exp_args:No \iow_term:n { \use_none:n #1 } }
+      \tl_set:Nn \l_@@_internal_tl {#2}
+      \__iow_with:Nnn \tex_newlinechar:D { 10 }
+        {
+          \__iow_with:Nnn \tex_errorcontextlines:D { -1 }
+            {
+              \etex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
+                { \exp_after:wN \l_@@_internal_tl }
+            }
+        }
+    }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % End the group to eliminate \cs{@@_class_new:nn}.
@@ -1976,22 +2011,22 @@
   {
     The~comma~list~ \tl_if_empty:nF {#1} { #1 ~ }
     \tl_if_empty:nTF {#2}
-      { is~empty \\>~ }
-      { contains~the~items~(without~outer~braces): #2 }
+      { is~empty \\>~ . }
+      { contains~the~items~(without~outer~braces): #2 . }
   }
 \@@_kernel_new:nnn { kernel } { show-prop }
   {
     The~property~list~#1~
     \tl_if_empty:nTF {#2}
-      { is~empty \\>~ }
-      { contains~the~pairs~(without~outer~braces): #2 }
+      { is~empty \\>~ . }
+      { contains~the~pairs~(without~outer~braces): #2 . }
   }
 \@@_kernel_new:nnn { kernel } { show-seq }
   {
     The~sequence~#1~
     \tl_if_empty:nTF {#2}
-      { is~empty \\>~ }
-      { contains~the~items~(without~outer~braces): #2 }
+      { is~empty \\>~ . }
+      { contains~the~items~(without~outer~braces): #2 . }
   }
 \@@_kernel_new:nnn { kernel } { show-streams }
   {
@@ -2002,7 +2037,7 @@
         { iow } { output ~ }
       }
     streams~are~
-    \tl_if_empty:nTF {#2} { open } { in~use: #2 }
+    \tl_if_empty:nTF {#2} { open } { in~use: #2 . }
   }
 %    \end{macrocode}
 %
@@ -2093,92 +2128,6 @@
       {#1} {#2} { } { } { } { }
   }
 %    \end{macrocode}
-% \end{macro}
-%
-% \subsection{Showing variables}
-%
-% Functions defined in this section are used for diagnostic functions
-% in \pkg{l3clist}, \pkg{l3file}, \pkg{l3prop}, \pkg{l3seq}, \pkg{xtemplate}
-%
-% \begin{variable}{\g_@@_log_next_bool}
-% \begin{macro}{\@@_log_next:}
-%    \begin{macrocode}
-\bool_new:N \g_@@_log_next_bool
-\cs_new_protected:Npn \@@_log_next:
-  { \bool_gset_true:N \g_@@_log_next_bool }
-%    \end{macrocode}
-% \end{macro}
-% \end{variable}
-%
-% \begin{macro}{\@@_show_wrap:n}
-% \begin{macro}{\@@_show_wrap_aux:n}
-% \begin{macro}[EXP]{\@@_show_wrap_aux:w}
-%   The argument of \cs{@@_show_wrap:n} is line-wrapped using
-%   \cs{iow_wrap:nnnN}.  Everything before the first~|>| in the wrapped
-%   text is removed, as well as an optional space following it (because
-%   of \texttt{f}-expansion).  In order for line-wrapping to give the
-%   correct result, the first~|>| must in fact appear at the beginning
-%   of a line and be followed by a space (or a line-break), so in
-%   practice, the argument of \cs{@@_show_wrap:n} begins with |>~| or
-%   |\\>~|.
-%
-%   The line-wrapped text is then either sent to the log file through
-%   \cs{iow_log:x}, or shown in the terminal using the
-%   \eTeX{} primitive \tn{showtokens} after removing a leading |>~| and
-%   trailing dot since those are added automatically by
-%   \tn{showtokens}.  The trailing dot was included in the first place
-%   because its presence can affect line-wrapping.  Note that the space
-%   after |>| is removed through \texttt{f}-expansion rather than by
-%   using an argument delimited by |>~| because the space may have been
-%   replaced by a line-break when line-wrapping.
-%
-%   A special case is that if the line-wrapped text is a single dot (in
-%   other words if the argument of \cs{@@_show_wrap:n}
-%   \texttt{x}-expands to nothing) then no |>~| should be removed.
-%   This makes it unnecessary to check explicitly for emptyness when
-%   using for instance \cs{seq_map_function:NN} \meta{seq~var}
-%   \cs{msg_show_item:n} as the argument of \cs{@@_show_wrap:n}.
-%
-%   Finally, the token list \cs{l_@@_internal_tl} containing the result
-%   of all these manipulations is displayed to the terminal using
-%   \cs{etex_showtokens:D} and odd \cs{exp_after:wN} which expand the
-%   closing brace to improve the output slightly.  The calls to
-%   \cs{__iow_with:Nnn} ensure that the \tn{newlinechar} is set to~$10$
-%   so that the \cs{iow_newline:} inserted by the line-wrapping code
-%   are correctly recognized by \TeX{}, and that \tn{errorcontextlines}
-%   is $-1$ to avoid printing irrelevant context.
-%
-%   Note also that \cs{g_@@_log_next_bool} is only reset if that is
-%   necessary.  This allows the user of an interactive prompt to insert
-%   tokens as a response to \eTeX{}'s \tn{showtokens}.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_show_wrap:n #1
-  { \iow_wrap:nnnN { #1 . } { } { } \@@_show_wrap_aux:n }
-\cs_new_protected:Npn \@@_show_wrap_aux:n #1
-  {
-    \tl_if_single:nTF {#1}
-      { \tl_clear:N \l_@@_internal_tl }
-      { \tl_set:Nf \l_@@_internal_tl { \@@_show_wrap_aux:w #1 \q_stop } }
-    \bool_if:NTF \g_@@_log_next_bool
-      {
-        \iow_log:x { > ~ \l_@@_internal_tl . }
-        \bool_gset_false:N \g_@@_log_next_bool
-      }
-      {
-        \__iow_with:Nnn \tex_newlinechar:D { 10 }
-          {
-            \__iow_with:Nnn \tex_errorcontextlines:D { -1 }
-              {
-                \etex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
-                  { \exp_after:wN \l_@@_internal_tl }
-              }
-          }
-      }
-  }
-\cs_new:Npn \@@_show_wrap_aux:w #1 > #2 . \q_stop {#2}
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
