--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -887,33 +887,34 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\bool_show:N, \bool_show:c, \bool_show:n}
+% \begin{macro}{\bool_show:n, \bool_log:n}
 % \begin{macro}{\@@_to_str:n}
 %   Show the truth value of the boolean, as \texttt{true} or
 %   \texttt{false}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \bool_show:N #1
-  {
-    \__kernel_check_defined:NT #1
-      { \__msg_show_wrap:n { > ~ \token_to_str:N #1 = \@@_to_str:n {#1} } }
-  }
 \cs_new_protected:Npn \bool_show:n
   { \msg_show_eval:Nn \@@_to_str:n }
+\cs_new_protected:Npn \bool_log:n
+  { \msg_log_eval:Nn \@@_to_str:n }
 \cs_new:Npn \@@_to_str:n #1
   { \bool_if:nTF {#1} { true } { false } }
-\cs_generate_variant:Nn \bool_show:N { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\bool_log:N, \bool_log:c, \bool_log:n}
-%   Redirect output of \cs{bool_show:N} to the log.
+% \begin{macro}{\bool_show:N, \bool_show:c, \bool_log:N, \bool_log:c, \@@_show:NN}
+%   Show the truth value of the boolean, as \texttt{true} or
+%   \texttt{false}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \bool_log:N
-  { \__msg_log_next: \bool_show:N }
-\cs_new_protected:Npn \bool_log:n
-  { \msg_log_eval:Nn \@@_to_str:n }
+\cs_new_protected:Npn \bool_show:N { \@@_show:NN \tl_show:n }
+\cs_generate_variant:Nn \bool_show:N { c }
+\cs_new_protected:Npn \bool_log:N { \@@_show:NN \tl_log:n }
 \cs_generate_variant:Nn \bool_log:N { c }
+\cs_new_protected:Npn \@@_show:NN #1#2
+  {
+    \__kernel_check_defined:NT #2
+      { \exp_args:Nx #1 { \token_to_str:N #2 = \@@_to_str:n {#2} } }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
