--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1133,7 +1133,7 @@
 \cs_new:Npn \char_value_catcode:n #1
   { \tex_the:D \tex_catcode:D \__int_eval:n {#1} }
 \cs_new_protected:Npn \char_show_value_catcode:n #1
-  { \__msg_show_wrap:n { > ~ \char_value_catcode:n {#1} } }
+  { \exp_args:Nf \tl_show:n { \char_value_catcode:n {#1} } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1268,25 +1268,25 @@
 \cs_new:Npn \char_value_mathcode:n #1
   { \tex_the:D \tex_mathcode:D \__int_eval:n {#1} }
 \cs_new_protected:Npn \char_show_value_mathcode:n #1
-  { \__msg_show_wrap:n { > ~ \char_value_mathcode:n {#1} } }
+  { \exp_args:Nf \tl_show:n { \char_value_mathcode:n {#1} } }
 \cs_new_protected:Npn \char_set_lccode:nn #1#2
   { \tex_lccode:D \__int_eval:n {#1} = \__int_eval:n {#2} }
 \cs_new:Npn \char_value_lccode:n #1
   { \tex_the:D \tex_lccode:D \__int_eval:n {#1} }
 \cs_new_protected:Npn \char_show_value_lccode:n #1
-  { \__msg_show_wrap:n { > ~ \char_value_lccode:n {#1} } }
+  { \exp_args:Nf \tl_show:n { \char_value_lccode:n {#1} } }
 \cs_new_protected:Npn \char_set_uccode:nn #1#2
   { \tex_uccode:D \__int_eval:n {#1} = \__int_eval:n {#2} }
 \cs_new:Npn \char_value_uccode:n #1
   { \tex_the:D \tex_uccode:D \__int_eval:n {#1} }
 \cs_new_protected:Npn \char_show_value_uccode:n #1
-  { \__msg_show_wrap:n { > ~ \char_value_uccode:n {#1} } }
+  { \exp_args:Nf \tl_show:n { \char_value_uccode:n {#1} } }
 \cs_new_protected:Npn \char_set_sfcode:nn #1#2
   { \tex_sfcode:D \__int_eval:n {#1} = \__int_eval:n {#2} }
 \cs_new:Npn \char_value_sfcode:n #1
   { \tex_the:D \tex_sfcode:D \__int_eval:n {#1} }
 \cs_new_protected:Npn \char_show_value_sfcode:n #1
-  { \__msg_show_wrap:n { > ~ \char_value_sfcode:n {#1} } }
+  { \exp_args:Nf \tl_show:n { \char_value_sfcode:n {#1} } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
