--- a/l3kernel/interface3.tex
+++ b/l3kernel/interface3.tex
@@ -38,7 +38,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\documentclass{l3doc}
+\documentclass[kernel]{l3doc}
 \listfiles
 
 \begin{document}
