--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -118,7 +118,7 @@
 % \end{macro}
 %</driver|package>
 %<*driver>
-\documentclass[full]{l3doc}
+\documentclass[full,kernel]{l3doc}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
