--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -21,7 +21,7 @@
 % for those people who are interested.
 %
 %<*driver>
-\documentclass[full]{l3doc}
+\documentclass[full,kernel]{l3doc}
 \usepackage{amsmath}
 \begin{document}
   \DocInput{\jobname.dtx}
