--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -23,7 +23,7 @@
 %<*driver|oldmodules>
 %</driver|oldmodules>
 %<*driver>
-\documentclass[full]{l3doc}
+\documentclass[full,kernel]{l3doc}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
