Make \IfBooleanTF robust against multi-token arguments (fix #422)
Previously \IfBooleanTF was a copy of \bool_if:NTF but that would break
if given an empty argument or a multi-token argument.  Now these misuses
are detected.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -520,14 +520,14 @@
 %
 % \begin{function}[EXP]{\IfBooleanT, \IfBooleanF, \IfBooleanTF}
 %   \begin{syntax}
-%     \cs{IfBooleanTF} \meta{argument} \Arg{true code} \Arg{false code}
+%     \cs{IfBooleanTF} \Arg{argument} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Used to test if \meta{argument} (|#1|, |#2|, \emph{etc.}) is
 %   \cs{BooleanTrue} or \cs{BooleanFalse}. For example
 %   \begin{verbatim}
 %     \NewDocumentCommand \foo { s m }
 %       {
-%         \IfBooleanTF #1
+%         \IfBooleanTF {#1}
 %           { \DoSomethingWithStar {#2} }
 %           { \DoSomethingWithoutStar {#2} }
 %       }
@@ -4042,6 +4042,13 @@
     (or~no~arguments~at~all).~You~cannot~have~a~terminal~optional~
     argument~with~expandable~commands.
   }
+\__msg_kernel_new:nnnn { xparse } { if-boolean }
+  { Invalid~use~\iow_char:N\\IfBooleanTF~{#1} }
+  {
+    \c__msg_coding_error_text_tl
+    The~first~argument~of~\iow_char:N\\IfBoolean(TF/T/F)~must~be~
+    a~boolean~argument~obtained~from~parsing~'s'~or~'t'~arguments.
+  }
 \__msg_kernel_new:nnnn { xparse } { inconsistent-long }
   { Inconsistent~long~arguments~for~expandable~command~'#1'. }
   {
@@ -4377,9 +4384,19 @@
 %   normal \cs{c_true_bool} and \cs{c_false_bool}, so testing for them is
 %   done with the \cs{bool_if:NTF} functions from \textsf{l3prg}.
 %    \begin{macrocode}
-\cs_new_eq:NN \IfBooleanTF \bool_if:NTF
-\cs_new_eq:NN \IfBooleanT  \bool_if:NT
-\cs_new_eq:NN \IfBooleanF  \bool_if:NF
+\cs_new:Npn \IfBooleanTF #1
+  {
+    \bool_lazy_and:nnTF
+      { \tl_if_single_p:n {#1} }
+      { \tl_if_single_token_p:n #1 }
+      { \bool_if:NTF #1 }
+      {
+        \__msg_kernel_error:nnn { xparse } { if-boolean } {#1}
+        \use_ii:nn
+      }
+  }
+\cs_new:Npn \IfBooleanT #1#2 { \IfBooleanTF {#1} {#2} { } }
+\cs_new:Npn \IfBooleanF #1 { \IfBooleanTF {#1} { } }
 %    \end{macrocode}
 % \end{macro}
 %
