Update l3candidates.dtx [ci skip]
`\subsection` -> `\subsubsection`

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1125,7 +1125,7 @@
 %<@@=box>
 %    \end{macrocode}
 %
-% \subsection{Viewing part of a box}
+% \subsubsection{Viewing part of a box}
 %
 % \begin{macro}{\box_clip:N, \box_clip:c}
 %   A wrapper around the driver-dependent code.
@@ -1295,7 +1295,7 @@
 %<@@=coffin>
 %    \end{macrocode}
 %
-% \subsection{Rotating coffins}
+% \subsubsection{Rotating coffins}
 %
 % \begin{variable}{\l_@@_sin_fp}
 % \begin{variable}{\l_@@_cos_fp}
@@ -1590,7 +1590,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \subsection{Resizing coffins}
+% \subsubsection{Resizing coffins}
 %
 % \begin{variable}{\l_@@_scale_x_fp}
 % \begin{variable}{\l_@@_scale_y_fp}
