Define and use candidate \prg_generate_conditional_variant:Nnn (fixes #427)
I only went through l3kernel, there may be other cases where this function
would shorten our code.

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -1155,9 +1155,7 @@
       \prg_return_true:
     \fi:
   }
-\cs_generate_variant:Nn \clist_get:NNT  { c }
-\cs_generate_variant:Nn \clist_get:NNF  { c }
-\cs_generate_variant:Nn \clist_get:NNTF { c }
+\prg_generate_conditional_variant:Nnn \clist_get:NN { c } { T , F , TF }
 \prg_new_protected_conditional:Npnn \clist_pop:NN #1#2 { T , F , TF }
   { \@@_pop_TF:NNN \tl_set:Nx #1 #2 }
 \prg_new_protected_conditional:Npnn \clist_gpop:NN #1#2 { T , F , TF }
@@ -1171,12 +1169,8 @@
       \prg_return_true:
     \fi:
   }
-\cs_generate_variant:Nn \clist_pop:NNT   { c }
-\cs_generate_variant:Nn \clist_pop:NNF   { c }
-\cs_generate_variant:Nn \clist_pop:NNTF  { c }
-\cs_generate_variant:Nn \clist_gpop:NNT  { c }
-\cs_generate_variant:Nn \clist_gpop:NNF  { c }
-\cs_generate_variant:Nn \clist_gpop:NNTF { c }
+\prg_generate_conditional_variant:Nnn \clist_pop:NN { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \clist_gpop:NN { c } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1452,15 +1446,10 @@
       { \@@_tmp:w ,#1, {} {} ,#2, }
       { \prg_return_false: } { \prg_return_true: }
   }
-\cs_generate_variant:Nn \clist_if_in:NnT  {     NV , No }
-\cs_generate_variant:Nn \clist_if_in:NnT  { c , cV , co }
-\cs_generate_variant:Nn \clist_if_in:NnF  {     NV , No }
-\cs_generate_variant:Nn \clist_if_in:NnF  { c , cV , co }
-\cs_generate_variant:Nn \clist_if_in:NnTF {     NV , No }
-\cs_generate_variant:Nn \clist_if_in:NnTF { c , cV , co }
-\cs_generate_variant:Nn \clist_if_in:nnT  {     nV , no }
-\cs_generate_variant:Nn \clist_if_in:nnF  {     nV , no }
-\cs_generate_variant:Nn \clist_if_in:nnTF {     nV , no }
+\prg_generate_conditional_variant:Nnn \clist_if_in:Nn
+  { NV , No , c , cV , co } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \clist_if_in:nn
+  { nV , no } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
