--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1241,9 +1241,7 @@
         \prg_return_true:
       }
   }
-\cs_generate_variant:Nn \ior_open:NnT  { c }
-\cs_generate_variant:Nn \ior_open:NnF  { c }
-\cs_generate_variant:Nn \ior_open:NnTF { c }
+\prg_generate_conditional_variant:Nnn \ior_open:Nn { c } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
