--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1307,12 +1307,10 @@
 %    \begin{macrocode}
 \__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \int_set_eq:NN #1#2 { #1 = #2 }
-\cs_generate_variant:Nn \int_set_eq:NN {       c }
-\cs_generate_variant:Nn \int_set_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \int_set_eq:NN { c , Nc , cc }
 \__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \int_gset_eq:NN #1#2 { \tex_global:D #1 = #2 }
-\cs_generate_variant:Nn \int_gset_eq:NN {       c }
-\cs_generate_variant:Nn \int_gset_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \int_gset_eq:NN { c , Nc , cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
