--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1171,13 +1171,11 @@
 \__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \dim_set_eq:NN #1#2
   { #1 = #2 \scan_stop: }
-\cs_generate_variant:Nn \dim_set_eq:NN {       c }
-\cs_generate_variant:Nn \dim_set_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \dim_set_eq:NN { c , Nc , cc }
 \__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \dim_gset_eq:NN #1#2
   { \tex_global:D #1 = #2 \scan_stop: }
-\cs_generate_variant:Nn \dim_gset_eq:NN {       c }
-\cs_generate_variant:Nn \dim_gset_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \dim_gset_eq:NN { c , Nc , cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1766,11 +1764,9 @@
 %   All straightforward.
 %    \begin{macrocode}
 \cs_new_protected:Npn \skip_set_eq:NN #1#2 { #1 = #2 }
-\cs_generate_variant:Nn \skip_set_eq:NN {       c }
-\cs_generate_variant:Nn \skip_set_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \skip_set_eq:NN { c , Nc , cc }
 \cs_new_protected:Npn \skip_gset_eq:NN #1#2 { \tex_global:D #1 = #2 }
-\cs_generate_variant:Nn \skip_gset_eq:NN {       c }
-\cs_generate_variant:Nn \skip_gset_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \skip_gset_eq:NN { c , Nc , cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -2073,12 +2069,10 @@
 %    \begin{macrocode}
 \__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \muskip_set_eq:NN #1#2 { #1 = #2 }
-\cs_generate_variant:Nn \muskip_set_eq:NN {       c }
-\cs_generate_variant:Nn \muskip_set_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \muskip_set_eq:NN { c , Nc , cc }
 \__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \muskip_gset_eq:NN #1#2 { \tex_global:D #1 = #2 }
-\cs_generate_variant:Nn \muskip_gset_eq:NN {       c }
-\cs_generate_variant:Nn \muskip_gset_eq:NN { Nc , cc }
+\cs_generate_variant:Nn \muskip_gset_eq:NN { c , Nc , cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
