--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1051,14 +1051,10 @@
   { \if_hbox:N #1 \prg_return_true: \else: \prg_return_false: \fi: }
 \prg_new_conditional:Npnn \box_if_vertical:N #1 { p , T , F , TF }
   { \if_vbox:N #1 \prg_return_true: \else: \prg_return_false: \fi: }
-\cs_generate_variant:Nn \box_if_horizontal_p:N { c }
-\cs_generate_variant:Nn \box_if_horizontal:NT  { c }
-\cs_generate_variant:Nn \box_if_horizontal:NF  { c }
-\cs_generate_variant:Nn \box_if_horizontal:NTF { c }
-\cs_generate_variant:Nn \box_if_vertical_p:N { c }
-\cs_generate_variant:Nn \box_if_vertical:NT  { c }
-\cs_generate_variant:Nn \box_if_vertical:NF  { c }
-\cs_generate_variant:Nn \box_if_vertical:NTF { c }
+\prg_generate_conditional_variant:Nnn \box_if_horizontal:N
+  { c } { p , T , F , TF }
+\prg_generate_conditional_variant:Nnn \box_if_vertical:N
+  { c } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1069,10 +1065,8 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \box_if_empty:N #1 { p , T , F , TF }
   { \if_box_empty:N #1 \prg_return_true: \else: \prg_return_false: \fi: }
-\cs_generate_variant:Nn \box_if_empty_p:N { c }
-\cs_generate_variant:Nn \box_if_empty:NT  { c }
-\cs_generate_variant:Nn \box_if_empty:NF  { c }
-\cs_generate_variant:Nn \box_if_empty:NTF { c }
+\prg_generate_conditional_variant:Nnn \box_if_empty:N
+  { c } { p , T , F , TF }
 %    \end{macrocode}
 %  \end{macro}
 %  \end{macro}
