--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -894,12 +894,8 @@
       }
       { \prg_return_false: }
   }
-\cs_generate_variant:Nn \prop_pop:NnNT   { c }
-\cs_generate_variant:Nn \prop_pop:NnNF   { c }
-\cs_generate_variant:Nn \prop_pop:NnNTF  { c }
-\cs_generate_variant:Nn \prop_gpop:NnNT  { c }
-\cs_generate_variant:Nn \prop_gpop:NnNF  { c }
-\cs_generate_variant:Nn \prop_gpop:NnNTF { c }
+\prg_generate_conditional_variant:Nnn \prop_pop:NnN { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \prop_gpop:NnN { c } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1009,10 +1005,8 @@
     \tl_if_eq:NNTF #1 \c_empty_prop
       \prg_return_true: \prg_return_false:
   }
-\cs_generate_variant:Nn \prop_if_empty_p:N { c }
-\cs_generate_variant:Nn \prop_if_empty:NT { c }
-\cs_generate_variant:Nn \prop_if_empty:NF { c }
-\cs_generate_variant:Nn \prop_if_empty:NTF { c }
+\prg_generate_conditional_variant:Nnn \prop_if_empty:N
+  { c } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1073,14 +1067,8 @@
     \fi:
     \__prg_break:
   }
-\cs_generate_variant:Nn \prop_if_in_p:Nn {     NV , No }
-\cs_generate_variant:Nn \prop_if_in_p:Nn { c , cV , co }
-\cs_generate_variant:Nn \prop_if_in:NnT  {     NV , No }
-\cs_generate_variant:Nn \prop_if_in:NnT  { c , cV , co }
-\cs_generate_variant:Nn \prop_if_in:NnF  {     NV , No }
-\cs_generate_variant:Nn \prop_if_in:NnF  { c , cV , co }
-\cs_generate_variant:Nn \prop_if_in:NnTF {     NV , No }
-\cs_generate_variant:Nn \prop_if_in:NnTF { c , cV , co }
+\prg_generate_conditional_variant:Nnn \prop_if_in:Nn
+  { NV , No , c , cV , co } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1105,12 +1093,8 @@
       }
       { \prg_return_false: }
   }
-\cs_generate_variant:Nn \prop_get:NnNT  {     NV , No }
-\cs_generate_variant:Nn \prop_get:NnNF  {     NV , No }
-\cs_generate_variant:Nn \prop_get:NnNTF {     NV , No }
-\cs_generate_variant:Nn \prop_get:NnNT  { c , cV , co }
-\cs_generate_variant:Nn \prop_get:NnNF  { c , cV , co }
-\cs_generate_variant:Nn \prop_get:NnNTF { c , cV , co }
+\prg_generate_conditional_variant:Nnn \prop_get:NnN
+  { NV , No , c , cV , co } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1143,8 +1127,7 @@
     #1 {#3} {#4}
     \@@_map_function:Nwwn #1
   }
-\cs_generate_variant:Nn \prop_map_function:NN {     Nc }
-\cs_generate_variant:Nn \prop_map_function:NN { c , cc }
+\cs_generate_variant:Nn \prop_map_function:NN { Nc , c , cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
