--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -522,10 +522,8 @@
       \prg_return_false:
     \fi:
   }
-\cs_generate_variant:Nn \quark_if_no_value_p:N { c }
-\cs_generate_variant:Nn \quark_if_no_value:NT  { c }
-\cs_generate_variant:Nn \quark_if_no_value:NF  { c }
-\cs_generate_variant:Nn \quark_if_no_value:NTF { c }
+\prg_generate_conditional_variant:Nnn \quark_if_no_value:N
+  { c } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -562,10 +560,8 @@
       { \@@_if_no_value:w {} #1 {} ? ! \q_no_value ? ? ! }
   }
 \cs_new:Npn \@@_if_no_value:w #1 \q_no_value #2 ? #3 ? ! { #1 #2 }
-\cs_generate_variant:Nn \quark_if_nil_p:n { V , o }
-\cs_generate_variant:Nn \quark_if_nil:nTF { V , o }
-\cs_generate_variant:Nn \quark_if_nil:nT  { V , o }
-\cs_generate_variant:Nn \quark_if_nil:nF  { V , o }
+\prg_generate_conditional_variant:Nnn \quark_if_nil:n
+  { V , o } { p , TF , T , F }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
