--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1900,14 +1900,8 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \tl_if_blank:n #1 { p , T , F , TF }
   { \@@_if_empty_return:o { \use_none:n #1 ? } }
-\cs_generate_variant:Nn \tl_if_blank_p:n { V }
-\cs_generate_variant:Nn \tl_if_blank:nT  { V }
-\cs_generate_variant:Nn \tl_if_blank:nF  { V }
-\cs_generate_variant:Nn \tl_if_blank:nTF { V }
-\cs_generate_variant:Nn \tl_if_blank_p:n { o }
-\cs_generate_variant:Nn \tl_if_blank:nT  { o }
-\cs_generate_variant:Nn \tl_if_blank:nF  { o }
-\cs_generate_variant:Nn \tl_if_blank:nTF { o }
+\prg_generate_conditional_variant:Nnn \tl_if_blank:n
+  { V , o } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1924,10 +1918,8 @@
       \prg_return_false:
     \fi:
   }
-\cs_generate_variant:Nn \tl_if_empty_p:N { c }
-\cs_generate_variant:Nn \tl_if_empty:NT  { c }
-\cs_generate_variant:Nn \tl_if_empty:NF  { c }
-\cs_generate_variant:Nn \tl_if_empty:NTF { c }
+\prg_generate_conditional_variant:Nnn \tl_if_empty:N
+  { c } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1954,10 +1946,8 @@
       \prg_return_false:
     \fi:
   }
-\cs_generate_variant:Nn \tl_if_empty_p:n { V }
-\cs_generate_variant:Nn \tl_if_empty:nTF { V }
-\cs_generate_variant:Nn \tl_if_empty:nT  { V }
-\cs_generate_variant:Nn \tl_if_empty:nF  { V }
+\prg_generate_conditional_variant:Nnn \tl_if_empty:n
+  { V } { p , TF , T , F }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2000,10 +1990,8 @@
       \prg_return_false:
     \fi:
   }
-\cs_generate_variant:Nn \tl_if_eq_p:NN { Nc , c , cc }
-\cs_generate_variant:Nn \tl_if_eq:NNTF { Nc , c , cc }
-\cs_generate_variant:Nn \tl_if_eq:NNT  { Nc , c , cc }
-\cs_generate_variant:Nn \tl_if_eq:NNF  { Nc , c , cc }
+\prg_generate_conditional_variant:Nnn \tl_if_eq:NN
+  { Nc , c , cc } { p , TF , T , F }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2037,9 +2025,8 @@
 \cs_new_protected:Npn \tl_if_in:NnT  { \exp_args:No \tl_if_in:nnT  }
 \cs_new_protected:Npn \tl_if_in:NnF  { \exp_args:No \tl_if_in:nnF  }
 \cs_new_protected:Npn \tl_if_in:NnTF { \exp_args:No \tl_if_in:nnTF }
-\cs_generate_variant:Nn \tl_if_in:NnT { c }
-\cs_generate_variant:Nn \tl_if_in:NnF  { c }
-\cs_generate_variant:Nn \tl_if_in:NnTF { c }
+\prg_generate_conditional_variant:Nnn \tl_if_in:Nn
+  { c } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2069,9 +2056,8 @@
       { \prg_return_false: } { \prg_return_true: }
     \if_false: } \fi:
   }
-\cs_generate_variant:Nn \tl_if_in:nnT  { V , o , no }
-\cs_generate_variant:Nn \tl_if_in:nnF  { V , o , no }
-\cs_generate_variant:Nn \tl_if_in:nnTF { V , o , no }
+\prg_generate_conditional_variant:Nnn \tl_if_in:nn
+  { V , o , no } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2187,9 +2173,8 @@
       { \@@_case:Nw #1 }
   }
 \cs_generate_variant:Nn \tl_case:Nn   { c }
-\cs_generate_variant:Nn \tl_case:NnT  { c }
-\cs_generate_variant:Nn \tl_case:NnF  { c }
-\cs_generate_variant:Nn \tl_case:NnTF { c }
+\prg_generate_conditional_variant:Nnn \tl_case:Nn
+  { c } { T , F , TF }
 %    \end{macrocode}
 %   To tidy up the recursion, there are two outcomes. If there was a hit to
 %   one of the cases searched for, then |#1| is the code to insert,
@@ -2756,10 +2741,8 @@
       \prg_return_false:
     \fi:
   }
-\cs_generate_variant:Nn \tl_if_head_eq_charcode_p:nN { f }
-\cs_generate_variant:Nn \tl_if_head_eq_charcode:nNTF { f }
-\cs_generate_variant:Nn \tl_if_head_eq_charcode:nNT  { f }
-\cs_generate_variant:Nn \tl_if_head_eq_charcode:nNF  { f }
+\prg_generate_conditional_variant:Nnn \tl_if_head_eq_charcode:nN
+  { f } { p , TF , T , F }
 %    \end{macrocode}
 %   For \cs{tl_if_head_eq_catcode:nN}, again we detect special cases
 %   with a \cs{tl_if_head_is_N_type:n}.  Then we need to test if the
