Add temporary variables for regex, ior, iow (fixes #429)
I checked that these are the only datatypes in l3kernel for which
temporary variables could make sense and that did not have them.
Excluded are things like quark, msg, flag and maybe a couple others.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -600,7 +600,7 @@
 %   and MiK\TeX{} systems.
 % \end{variable}
 %
-% \subsection{Constant input--output streams}
+% \subsection{Constant input--output streams, and variables}
 %
 % \begin{variable}{\c_term_ior}
 %   Constant input stream for reading from the terminal. Reading from this
@@ -611,9 +611,23 @@
 %   \end{verbatim}
 % \end{variable}
 %
+% \begin{variable}[added = 2017-12-11]{\g_tmpa_ior, \g_tmpb_ior}
+%   Scratch input stream for global use. These are never used by
+%   the kernel code, and so are safe for use with any \LaTeX3-defined
+%   function. However, they may be overwritten by other non-kernel
+%   code and so should only be used for short-term storage.
+% \end{variable}
+%
 % \begin{variable}{\c_log_iow, \c_term_iow}
 %   Constant output streams for writing to the log and to the terminal
 %   (plus the log), respectively.
+% \end{variable}
+%
+% \begin{variable}[added = 2017-12-11]{\g_tmpa_iow, \g_tmpb_iow}
+%   Scratch output stream for global use. These are never used by
+%   the kernel code, and so are safe for use with any \LaTeX3-defined
+%   function. However, they may be overwritten by other non-kernel
+%   code and so should only be used for short-term storage.
 % \end{variable}
 %
 % \subsection{Primitive conditionals}
@@ -1216,6 +1230,14 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}{\g_tmpa_ior, \g_tmpb_ior}
+%   The usual scratch space.
+%    \begin{macrocode}
+\ior_new:N \g_tmpa_ior
+\ior_new:N \g_tmpb_ior
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}{\ior_open:Nn, \ior_open:cn}
 %   Use the conditional version, with an error if the file is not found.
 %    \begin{macrocode}
@@ -1557,6 +1579,14 @@
 \cs_generate_variant:Nn \iow_new:N { c }
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{variable}{\g_tmpa_iow, \g_tmpb_iow}
+%   The usual scratch space.
+%    \begin{macrocode}
+\iow_new:N \g_tmpa_iow
+\iow_new:N \g_tmpb_iow
+%    \end{macrocode}
+% \end{variable}
 %
 % \begin{macro}{\@@_new:N}
 %   As for read streams, copy \tn{newwrite} in package mode, making sure
