--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -663,6 +663,22 @@
 %   locally to \meta{tl~var}.
 % \end{function}
 %
+% \subsection{Constants and variables}
+%
+% \begin{variable}[added = 2017-12-11]{\l_tmpa_regex, \l_tmpb_regex}
+%   Scratch regex for local assignment. These are never used by
+%   the kernel code, and so are safe for use with any \LaTeX3-defined
+%   function. However, they may be overwritten by other non-kernel
+%   code and so should only be used for short-term storage.
+% \end{variable}
+%
+% \begin{variable}[added = 2017-12-11]{\g_tmpa_regex, \g_tmpb_regex}
+%   Scratch regex for global assignment. These are never used by
+%   the kernel code, and so are safe for use with any \LaTeX3-defined
+%   function. However, they may be overwritten by other non-kernel
+%   code and so should only be used for short-term storage.
+% \end{variable}
+%
 % \subsection{Bugs, misfeatures, future work, and other possibilities}
 %
 % The following need to be done now.
@@ -5586,6 +5602,16 @@
   { \cs_new_eq:NN #1 \c_@@_no_match_regex }
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{variable}{\l_tmpa_regex, \l_tmpb_regex, \g_tmpa_regex, \g_tmpb_regex}
+%   The usual scratch space.
+%    \begin{macrocode}
+\regex_new:N \l_tmpa_regex
+\regex_new:N \l_tmpb_regex
+\regex_new:N \g_tmpa_regex
+\regex_new:N \g_tmpb_regex
+%    \end{macrocode}
+% \end{variable}
 %
 % \begin{macro}{\regex_set:Nn, \regex_gset:Nn, \regex_const:Nn}
 %   Compile, then store the result in the user variable with the
