Markup fixes [ci skip]
From running cmdcheck ...

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2432,7 +2432,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP, pTF]{\sys_if_shell_unrestricted:}
+% \begin{macro}[EXP, pTF]{\sys_if_shell_restricted:}
 %   Performs a check for whether \emph{restricted} shell escape is
 %   enabled.  This returns false if unrestricted shell escape is
 %   enabled.  Unrestricted shell escape is not considered a superset
