--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1188,7 +1188,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[TF]{\str_if_in:Nn, \str_if_in:cn \str_if_in:nn}
+% \begin{macro}[TF]{\str_if_in:Nn, \str_if_in:cn, \str_if_in:nn}
 %   Everything here needs to be detokenized but beyond that it is a
 %   simple token list test.  It would be faster to fine-tune the |T|,
 %   |F|, |TF| variants by calling the appropriate variant of
@@ -1287,8 +1287,11 @@
 % \subsection{Mapping to strings}
 %
 % \begin{macro}[rEXP]{\str_map_function:NN, \str_map_function:cN}
+% \begin{macro}[rEXP]{\str_map_function:nN}
 % \begin{macro}{\str_map_inline:Nn, \str_map_inline:cn}
+% \begin{macro}{\str_map_inline:nn}
 % \begin{macro}{\str_map_variable:NNn, \str_map_variable:cNn}
+% \begin{macro}{\str_map_variable:nNn}
 % \begin{macro}{\str_map_break:}
 % \begin{macro}{\str_map_break:n}
 % \begin{macro}[rEXP]{\@@_map_function:w, \@@_map_function:Nn}
@@ -1378,6 +1381,9 @@
 \cs_new:Npn \str_map_break:n
   { \__prg_map_break:Nn \str_map_break: }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
